// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ONS Summary Group Table test matches Snapshot 1`] = `
LoadedCheerio {
  "0": <h3
    class="ons-summary__group-title"
  >
    test
  </h3>,
  "1": <table
    class="ons-summary__items"
  >
    <tbody
      class="ons-summary__item"
    >
      <tr
        class="ons-summary__row ons-summary__row--has-values"
      >
        <td
          class="ons-summary__item-title"
        >
          <div
            class="ons-summary__item--text"
          >
            Foo
          </div>
        </td>
        <td
          class="ons-summary__values"
          colspan="2"
        >
          bar
        </td>
      </tr>
    </tbody>
  </table>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 2,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`ONS Summary Item Row test matches Snapshot 1`] = `
LoadedCheerio {
  "0": <tbody
    class="ons-summary__item"
  >
    <tr
      class="ons-summary__row ons-summary__row--has-values"
    >
      <td
        class="ons-summary__item-title"
      >
        <div
          class="ons-summary__item--text"
        >
          Foo
        </div>
      </td>
      <td
        class="ons-summary__values"
        colspan="2"
      >
        bar
      </td>
    </tr>
  </tbody>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
